--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新しい学習指導要領の考え方 - AI学習診断クイズ(発展学習サイクル版)</title>
+    <title>【V2】新しい学習指導要領の考え方 - AI学習診断クイズ</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -90,10 +90,19 @@
         const hintModal = document.getElementById('hint-modal');
         const hintText = document.getElementById('hint-text');
 
-        // この関数は、前のステップで修正したものです
         async function generateQuestions(subjectKey, level, count) {
-            // このURLをあなたのCloud FunctionのURLに書き換えてください
-            const cloudFunctionUrl = 'https://asia-northeast1-gen-lang-client-0728600726.cloudfunctions.net/generateQuizQuestions';
+            // ==================================================================
+            // ★★★★★【重要】このURLをあなたのURLに書き換えてください★★★★★
+            // ==================================================================
+            const cloudFunctionUrl = 'YOUR_CLOUD_FUNCTION_URL_HERE'; 
+
+            // もしURLを忘れた場合は、Google Cloud SDK Shellで以下のコマンドを実行して確認してください
+            // gcloud functions describe generateQuizQuestions --gen2 --region=asia-northeast1
+
+            if (cloudFunctionUrl === 'YOUR_CLOUD_FUNCTION_URL_HERE') {
+                quizDisplayAreaDiv.innerHTML = `<div class="bg-white p-8 rounded-xl shadow-lg text-center"><p class="text-red-500 font-bold">設定エラー</p><p class="text-sm text-gray-600 mt-2">HTMLファイル内のCloud FunctionのURLが設定されていません。コードを編集してください。</p><button class="mt-4 bg-gray-700 text-white font-bold py-2 px-6 rounded-lg" onclick="goHome()">ホームに戻る</button></div>`;
+                throw new Error("Cloud Function URL is not set.");
+            }
 
             const payload = {
                 subjectKey: subjectKey,
@@ -273,7 +282,7 @@
         function showResults(phase) {
             state.currentPhase = 'results';
             const subject = quizData[state.currentSubject];
-            const answers = (phase === 'basic') ? state.userAnswers : state.advancedAnswers;
+            const answers = (phase === 'basic' || phase === 'rechallenge') ? state.userAnswers : state.advancedAnswers;
             const questions = (phase === 'basic') ? state.generatedQuestions.basic : state.generatedQuestions.advanced;
 
             const results = { total: questions.length, correct: 0, byCategory: {} };
@@ -329,7 +338,7 @@
             let actionButtonsHtml = '';
             if (phase === 'basic') {
                 const canAdvance = score >= 70 && state.generatedQuestions.advanced && state.generatedQuestions.advanced.length > 0;
-                const hasIncorrect = results.correct < results.total;
+                const hasIncorrect = state.userAnswers.some(ans => ans && !ans.isCorrect);
                 actionButtonsHtml = `
                     ${hasIncorrect ? `<button class="w-full bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-3 px-6 rounded-lg" onclick="startQuiz(state.currentSubject, 'rechallenge')">不正解の問題に再挑戦する</button>` : ''}
                     <button class="w-full ${canAdvance ? `bg-${subject.color}-500 hover:bg-${subject.color}-600` : 'bg-gray-400 cursor-not-allowed'} text-white font-bold py-3 px-6 rounded-lg" ${!canAdvance ? 'disabled' : ''} onclick="startQuiz(state.currentSubject, 'advanced')">発展問題に挑戦する</button>
