--- a/index.html
+++ b/index.html
@@ -91,12 +91,10 @@
         const hintText = document.getElementById('hint-text');
 
         async function generateQuestions(subjectKey, level, count) {
-            // ==================================================================
-            // ★★★★★【重要】このURLをあなたのURLに書き換えてください★★★★★
-            // ==================================================================
-            const cloudFunctionUrl = 'YOUR_CLOUD_FUNCTION_URL_HERE'; 
 
-            if (cloudFunctionUrl === 'YOUR_CLOUD_FUNCTION_URL_HERE') {
+            const cloudFunctionUrl = 'https://asia-northeast1-gen-lang-client-0728600726.cloudfunctions.net/generateQuizQuestions'; 
+
+            if (cloudFunctionUrl === 'https://asia-northeast1-gen-lang-client-0728600726.cloudfunctions.net/generateQuizQuestions') {
                 quizDisplayAreaDiv.innerHTML = `<div class="bg-white p-8 rounded-xl shadow-lg text-center"><p class="text-red-500 font-bold">設定エラー</p><p class="text-sm text-gray-600 mt-2">HTMLファイル内のCloud FunctionのURLが設定されていません。コードを編集してください。</p><button class="mt-4 bg-gray-700 text-white font-bold py-2 px-6 rounded-lg" onclick="goHome()">ホームに戻る</button></div>`;
                 throw new Error("Cloud Function URL is not set.");
             }
@@ -187,13 +185,14 @@
             quizDisplayAreaDiv.innerHTML = `
                 <div class="bg-white p-6 sm:p-8 rounded-xl shadow-lg animate-fade-in">
                     <div class="flex justify-between items-center mb-4">
-                        <h3 class="text-xl font-bold text-${subject.color}-600">${subject.title} - ${phaseTitle}</h3>
-                        <!-- ★★★★★ ここにボタンを追加しました ★★★★★ -->
+                        <h3 class="text-xl font-bold text-${subject.color}-600">${subject.title}</h3>
                         <button onclick="goHome()" class="text-sm bg-gray-200 hover:bg-gray-300 text-gray-700 font-semibold py-1 px-3 rounded-lg">トップに戻る</button>
                     </div>
-                    <div class="flex justify-end items-center -mt-2 mb-4">
+                    <div class="flex justify-between items-center -mt-2 mb-4">
+                        <span class="text-sm font-semibold text-gray-500">${phaseTitle}</span>
                         <span class="text-sm font-semibold text-gray-500">問題 ${state.currentQuestionIndex + 1} / ${state.questionSet.length}</span>
                     </div>
+                    <div class="w-full bg-gray-200 rounded-full h-2.5 mb-1"><div class="bg-${subject.color}-500 h-2.5 rounded-full" style="width: ${((state.currentQuestionIndex) / state.questionSet.length) * 100}%"></div></div>
                     <p class="mt-4 mb-5 text-lg leading-relaxed">${questionData.q}</p>
                     <div id="options-container">${optionsHtml}</div>
                     <div class="text-center mt-4"><button id="hint-btn" class="text-sm text-yellow-600 font-semibold hover:underline" onclick="showHint()">ヒントを見る</button></div>
